<resources>
    <string name="app_name">TouchProtector</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="first_line">Overlay display</string>
    <string name="second_line">Tap here to change settings.</string>
    <string name="transparent_text">Transparent background</string>
    <string name="status_trial">Trial : Last </string>
    <string name="status_unlimited">Unlimited</string>
    <string name="status_expired">Expired</string>
    <string name="hours">hours</string>
    <string name="mins">minutes</string>
    <string name="icon_size">icon size</string>
    <string name="back_on">Back operation:ON</string>
    <string name="back_off">Back operation:OFF</string>
    <string name="disp_size">DisplaySize : </string>
    <string name="limit_text">The trial period has expired. \nTo continue using it, please upgrade to the paid unlimited version or watch the ad and extend the 24-hour trial period.</string>
    <string name="upgrade">Upgrade</string>
    <string name="update_description">* Update the status by turning it on again</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="icon">icon</string>
    <string name="color">color</string>
    <string name="none">None</string>
    <string name="stop">stop</string>
    <string name="watch_ad">Watch CM</string>
    <string name="rewarded_ad">The trial period has been extended by 24 hours.</string>

    <string name="q_how_to_use">Q.How to use the app?</string>
    <string name="a_how_to_use">A.This app is to prevent accidental touch on the screen. Specify the touch limit range from the "Setting" tab at the top of the screen.</string>
    <string name="q_how_to_set">Q.How to set?</string>
    <string name="a_how_to_set">A.By tapping the icons displayed on the top, bottom, left, and right of the setting screen, you can edit the touch limit area about the position. "Width / Height" and "Show / Hide" can be set at each position.</string>
    <string name="q_icon">Q.What is the icon displayed in the touch limit area?</string>
    <string name="a_icon">A.Long press the icon to switch the back operation ON / OFF.</string>
    <string name="q_change_reflect">Q.The setting change is not reflected.</string>
    <string name="a_change_reflect">A.The current setting is reflected by switching the display to OFF and then turning it ON again.</string>
    <string name="q_cannot_manipulate">Q.I applied the range to the entire screen and can no longer operate it.</string>
    <string name="a_cannot_manipulate">A.You can cancel the touch restriction by pressing "Stop" from the notification bar.</string>
    <string name="q_apply_to_edge">Q.It does not apply to the edge of the screen.</string>
    <string name="a_apply_to_edge">A.On Android, the display cannot be overlaid on the system that is important for security, so it may not be displayed at the edge depending on the screen. This application is displayed at the end that can be displayed on each screen.</string>
    <string name="q_trial">Q.What is the trial period?</string>
    <string name="a_trial">A.This application can be used free of charge for 7 days (168 hours) from the first startup. Subsequent startups will prompt you to upgrade to the unlimited version or extend it for free. The unlimited version can be used for an unlimited period of time.</string>
    <string name="q_entire_protect">Q.How can I make the entire screen untouchable?</string>
    <string name="a_entire_protect">A. Please follow the steps below. \n
         1. Turn off the display on the "Home" screen. \n
         2. Set the icon to "None", check "Transparent background" and maximize "Icon size". \n
         3. On the "Setting" screen, turn on only "Top" and adjust the width and height to the values on the long side of the screen (Ex. If the screen size is 1080 x 2160, set width = height = 2160). Turn off the display for other positions. \n
         4. Turn on the display on the "Home" screen. \n
         5. Press and hold near the center of the screen. Close the app when the rear operation is turned on. \n
         6. On the screen where you want to make the entire screen untouchable, press and hold the light red part at the top of the screen. \n
         7. The entire screen becomes untouchable. To operate again, press and hold near the center of the screen to turn on the rear operation.
    </string>
    <string name="q_contact">Q.How can I contact you?</string>
    <string name="a_contact">A.Please feel free to contact us at the email address below.\n\nganbalism@gmail.com</string>

    <string name="welcome">Welcome</string>
    <string name="welcome_message">Please check the usage from the "Help" tab at the top of the screen. \nPlease allow "Overlay on other apps" on the next screen.</string>
</resources>
