<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="20dp">

        <!--        Question 1-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_how_to_use"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_how_to_use" />

        <!--        Question 1-2-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_how_to_set"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_how_to_set" />

        <!--        Question 2-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_icon"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_icon" />

        <!--        Question 3-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_change_reflect"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_change_reflect" />

        <!--        Question 4-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_cannot_manipulate"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_cannot_manipulate" />

        <!--        Question 5-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_apply_to_edge"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_apply_to_edge" />

        <!--        Question 6-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_trial"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_trial" />

        <!--        Question 7-->

        <soup.neumorphism.NeumorphCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:neumorph_shadowElevation="3dp"
            app:neumorph_shapeType="basin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/q_contact"
                android:textStyle="bold" />
        </soup.neumorphism.NeumorphCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:text="@string/a_contact"
            android:textIsSelectable="true" />

    </LinearLayout>
</ScrollView>