<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- コンテンツ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="6dp"
        android:background="@drawable/dialog_appearance"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp">


        <!-- タイトル -->

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title"
            android:padding="10dp"
            android:text="@string/upgrade"
            android:textSize="18sp" />

        <!-- メッセージ -->

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/limit_text"
            android:textColor="#333333"
            android:textSize="16sp" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#9A9A9A"
                android:text="@string/watch_ad"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/upgrade_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="#FFC929"
                android:text="@string/upgrade"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/dimmer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#BBFFFFFF"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:visibility="gone"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</RelativeLayout>