<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.pandatone.touchProtector.ui.viewModel.SettingViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--    上下左右に肉球マーク　-->
        <soup.neumorphism.NeumorphImageButton
            android:id="@+id/top_button"
            style="@style/CircleButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerInside"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_cat"
            android:onClick="@{() -> viewModel.changePosition(0)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphImageButton
            android:id="@+id/right_button"
            style="@style/CircleButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cat"
            android:onClick="@{() -> viewModel.changePosition(1)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <soup.neumorphism.NeumorphImageButton
            android:id="@+id/bottom_button"
            style="@style/CircleButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_cat"
            android:onClick="@{() -> viewModel.changePosition(2)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <soup.neumorphism.NeumorphImageButton
            android:id="@+id/left_button"
            style="@style/CircleButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cat"
            android:onClick="@{() -> viewModel.changePosition(3)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--    カード　-->
        <soup.neumorphism.NeumorphCardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/top_button"
            app:layout_constraintBottom_toTopOf="@id/bottom_button"
            app:layout_constraintEnd_toStartOf="@id/right_button"
            app:layout_constraintStart_toEndOf="@id/left_button" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Top"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/active_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    app:layout_constraintStart_toEndOf="@id/title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title"
                    app:layout_constraintBottom_toBottomOf="@id/title"/>


                <TextView
                    android:id="@+id/width_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/index_background"
                    android:text="@string/width"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/width_index"
                    app:layout_constraintStart_toEndOf="@id/height_index"
                    app:layout_constraintTop_toTopOf="@id/width_index" />

                <TextView
                    android:id="@+id/height_index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/index_background"
                    android:text="@string/height"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@id/width_index"
                    app:layout_constraintTop_toBottomOf="@id/width_index" />

                <TextView
                    android:id="@+id/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintBottom_toBottomOf="@id/height_index"
                    app:layout_constraintStart_toEndOf="@id/height_index"
                    app:layout_constraintTop_toTopOf="@id/height_index" />

            <ImageView
                android:id="@+id/width_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_height"
                android:rotation="90"
                app:layout_constraintBottom_toBottomOf="@id/width_edit_field"
                app:layout_constraintEnd_toStartOf="@id/width_edit_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/width_edit_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/width"
                    android:padding="5dp"
                    app:layout_constraintVertical_chainStyle="packed"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/height_index"
                    app:layout_constraintBottom_toTopOf="@id/height_edit_field"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/width_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/height_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:src="@drawable/ic_height"
                app:layout_constraintBottom_toBottomOf="@id/height_edit_field"
                app:layout_constraintEnd_toStartOf="@id/height_edit_field" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/height_edit_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/height"
                    android:padding="5dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/width_edit_field"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/height_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="3"
                        android:inputType="number"
                        android:maxLength="4"
                        android:maxLines="1"
                        android:textAlignment="center" />
                </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/display_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/disp_size"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </soup.neumorphism.NeumorphCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>